2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Abort if an error is found while updating the
	user or group database. No changes will be written in the
	databases.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: It is no more needed to check that the user's
	groups are specified only once in the group file. This is checked
	by gr_update().

2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c (next_entry_by_name): New function.
	* NEWS, lib/commonio.c (commonio_update): When an entry is updated, make
	sure that there are no other entry with the same name. This fixes
	an infinite loop in userdel and usermod when an (erroneous) group
	file contains two entries with the same name.
	(https://bugzilla.redhat.com/show_bug.cgi?id=240915)

2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Make sure the salt string is terminated at the
	right place (either 8th, or 11th position).
	* NEWS, src/chgpasswd.c, src/chpasswd.c: The protocol + salt does
	not need 15 chars. No need for a temporary buffer.
	This change the fix committed on 2007-11-10. The salt provided to
	pw_encrypt could have been too long.

2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/fr/fr.po: Fix typo: missing / in <placeholder-1/>. This
	caused the gpasswd title to be incomplete in the French manpage.

2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Check if the l64a function exists instead of a64l
	which we do not use.
	* libmisc/salt.c: Add support for uClibc with no l64a().

2007-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Check if the netdb.h header file and the innetgr
	function exist.
	* src/login_nopam.c, NEWS: Add support for systems with no
	innetgr().  On those systems, username with an @ will be treated