@@ -1,5 +1,10 @@
 2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, src/usermod.c: Update the group database before flushing
+	the nscd caches.
+
+2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* NEWS, src/userdel.c: Abort if an error is found while updating the
 	user or group database. No changes will be written in the
 	databases.
